--- a/nimbus-ui/nimbusui/src/assets/scss/_a.action-dropdown.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.action-dropdown.scss
@@ -25,8 +25,8 @@
         .dropdownContent {
             max-height: 0;
             width: 200px;
-            background: #fff;
-            border: 1px solid #999;
+            background: #fcf6d9;
+            border: 1px solid #e5991c;
             overflow-y: auto;
             top: 0;
             position: absolute;
@@ -38,7 +38,8 @@
                 text-decoration: none;
                 padding:.2rem .4rem;
                 &:hover{
-                    background: #eee;
+                    background: #4a90e2;
+                    color: #fff;
                 }
             }
         }
