--- a/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
@@ -108,10 +108,26 @@ p-dropdown.form-control {
     border: none;
     padding:0;
     background: none;
-
+    .ui-widget-content {
+        border: 1px solid #9dd3f7;
+        background: #ecf7ff;
+        border-radius: 0;
+    }
+    .ui-state-highlight,
+    .ui-dropdown-panel .ui-dropdown-item:not(.ui-state-highlight):hover {
+        border-color: #4a90e2;
+        background: #4a90e2;
+        color: #FFFFFF;
+    }
 }
 .ui-dropdown {
     min-width: 150px;
+    .ui-dropdown-panel .ui-dropdown-list{
+        padding:0;
+    }
+}
+.ui-corner-all {
+    border-radius: 0px;
 }
 //START inline edit text input styles for inplace-editor.component
 .form-group{
@@ -202,24 +218,55 @@ p-dropdown.form-control {
     width: 150px; 
 }
 
+
 // custom radio
-.ui-radiobutton{
-    .ui-radiobutton-icon{
-        position:relative;
-        &::before {
-            position: absolute;
-            font-size: .6rem;
-            top: -.6rem;
-            left: -.25rem;
+
+.ui-state-default {
+    border: 1px solid #9dd3f7;
+    background: #ffffff;
+    color: #4c4c4c;
+}
+p-checkbox.ng-dirty.ng-invalid .ui-chkbox-box {
+    border-bottom-color: #9dd3f7;
+}
+
+    .ui-chkbox-box.ui-state-active, 
+    .ui-radiobutton-box.ui-state-active {
+        border: 1px solid #006bc2;
+        background: #006bc2;
+        color: #FFFFFF;
+   
+        .ui-radiobutton-icon{
+            position:relative;
+            vertical-align: bottom;
+            &::before {
+                position: absolute;
+                font-size: .3rem;
+                bottom: .4rem;
+                left: -.15rem;
+            }
         }
     }
-}
+    .ui-radiobutton-box:not(.ui-state-disabled):not(.ui-state-active):hover,
+    .ui-chkbox-box:not(.ui-state-disabled):not(.ui-state-active):hover {
+        border-color: #006bc2;
+        background: #D9EDFD;
+    }
+    .ui-radiobutton-box.ui-state-disabled,
+    .ui-radiobutton-box.ui-state-disabled:hover,
+    .ui-chkbox-box.ui-state-disabled,
+    .ui-chkbox-box.ui-state-disabled:hover {
+        border-color: #dadada;
+        background: #ebebeb;
+    }
+
+
 
 .custom-radio {
     .custom-control-input{
         &:checked ~ .custom-control-indicator{
             background-image: none;
-            background-color: #186ba0;
+            background-color: #006bc2;
             color: #fff;
             &::after{
                 font-family: fontAwesome;
@@ -240,7 +287,7 @@ p-dropdown.form-control {
     .custom-control-input{
         &:checked ~ .custom-control-indicator{
             background-image: none;
-            background-color: #186ba0;
+            background-color: #006bc2;
             color: #fff;
             &::after{
                 font-family: fontAwesome;
