--- a/nimbus-ui/nimbusui/src/assets/scss/_custom.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_custom.scss
@@ -20,15 +20,7 @@ $input-padding-x:                .5rem ;
 $input-padding-y:                .25rem ;
 $input-line-height:              1;
 
-
-$gray-dark:                 #333333 ; 
-$gray-med:                  #565656 ; 
-$gray:                      #aaaaaa ; //silver chalice
-$gray-light:                #e6e6e6 ; //mecury
-$gray-lighter:              #eceeef ;
-$gray-lightest:             #f7f7f9 ;
-
-$font-family-base:       'SourceSansPro', san-serif;
+$font-family-base:       "Lucida Sans Unicode", "Lucida Grande", san-serif;
 
 $custom-control-indicator-bg: #fff;
 
