--- a/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
@@ -18,7 +18,7 @@
         </ng-template>
         <ng-template [ngIf]="isDate(element.type.name)">
             <label class="" *ngIf="element.config.uiStyles.attributes.showName==true">{{label}}</label>
-            <div class="{{iconClass}}">{{value | dateTimeFormat: element.config?.uiStyles?.attributes?.datePattern }}&nbsp;</div>
+            <div class="{{iconClass}}">{{value | dateTimeFormat: element.config?.uiStyles?.attributes?.datePattern : element.type.name }}&nbsp;</div>
          </ng-template>
         <div class="form-group" *ngIf="!element.config.uiStyles.attributes.inplaceEdit && !isDate(element.type.name)">
             <label class="" *ngIf="element.config.uiStyles.attributes.showName==true">{{label}}</label>
