--- a/nimbus-ui/nimbusui/src/app/components/platform/loader/loader.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/loader/loader.component.html
@@ -1,8 +1,9 @@
 <div [class.loader-hidden]="!show">
     <div class="loader-overlay">
-            <div>
+            <div class="loader">Loading...</div>
+            <!-- <div>
                 <!-- <p-progressBar mode="indeterminate" *ngIf="show"></p-progressBar> -->
-                <p-progressSpinner  [style]="{width: '50px', height: '50px'}" strokeWidth="8" fill="#EEEEEE" animationDuration=".5s" *ngIf="show"></p-progressSpinner>
-            </div>
+                <!--  <p-progressSpinner  [style]="{width: '50px', height: '50px'}" strokeWidth="8" fill="#EEEEEE" animationDuration=".5s" *ngIf="show"></p-progressSpinner>
+            </div> -->
     </div>
 </div>
