update size of loader icon

--- a/nimbus-ui/nimbusui/src/assets/scss/_a.loader.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.loader.scss
@@ -13,7 +13,7 @@
 
 .loader {
     margin: auto 0;
-    font-size: 1rem;
+    font-size: .6rem;
     width: 1em;
     height: 1em;
     border-radius: 50%;
