--- a/nimbus-ui/nimbusui/src/app/components/home/home-layout.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/home/home-layout.component.html
@@ -1,17 +1,12 @@
-<nm-header-global [branding]="branding" [topMenuItems]="topMenuItems"   [leftMenuItems]="leftMenuItems"></nm-header-global>
+<nm-header-global [branding]="branding" [topMenuItems]="topMenuItems" [leftMenuItems]="leftMenuItems"></nm-header-global>
 
 <!-- Everything after header -->
-<nm-nav-menu-global [organization]= "organization" [menuItems]="menuItems" [menuLinks]="menuLinks"></nm-nav-menu-global> 
+<nm-nav-menu-global [organization]= "organization" [menuItems]="menuItems" [menuLinks]="menuLinks" *ngIf="navMenuBar == true"></nm-nav-menu-global> 
 
 <div class='wrapper'>
-
 	<div id="main-content" class="main-content" >
-        <router-outlet></router-outlet>
-                
-      
-
+	        <router-outlet></router-outlet>
 	</div><!--  END main-content  -->
-	
 </div><!--  END wrapper  -->
 
 <nm-footer-global [footerConfig] = "footer"></nm-footer-global>
