add accordion styles

--- a/nimbus-ui/nimbusui/src/styles.scss
+++ b/nimbus-ui/nimbusui/src/styles.scss
@@ -17,3 +17,4 @@
 @import "assets/scss/a.action-dropdown";
 @import "assets/scss/a.fileUpload";
 @import "assets/scss/a.loader";
+@import "assets/scss/a.accordion";
