--- a/nimbus-ui/nimbusui/src/assets/scss/_a.accordion.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.accordion.scss
@@ -24,6 +24,7 @@
     .ui-accordion-content-wrapper {
         border: 1px solid #669fe2;
         margin-bottom: 1rem;
+        padding: 0.1rem;
     }
     
 }
