--- a/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
@@ -106,7 +106,7 @@ textarea.form-control {
 
 p-dropdown.form-control {
     border: none;
-    padding:0;
+    padding:0.1rem;
     background: none;
     .ui-widget-content {
         border: 1px solid #9dd3f7;
