--- a/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
@@ -48,6 +48,32 @@ h3{
 //         text-align: center;
 //     }
 // }
+.message {
+    text-align: center;
+    padding: .3rem;
+    margin: 0 0 .6rem 0;
+    font-weight: bold;
+    &::before {
+        font-family: "fontAwesome";
+        margin-right: 1rem;
+        font-size: 1.5rem;
+    }
+    &.danger {
+        background: #e9a129;
+        color: #ae0015;
+        &::before {
+            content: "\f001";
+        }
+    }
+    &.success {
+        background: #e6f6d4;
+        color: #5aa00d;
+        &::before {
+            content: "\f001";
+        }
+    }
+}
+
 h1.page-title {
     margin-bottom:0; 
     margin-left:20px; 
