--- a/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
@@ -58,14 +58,14 @@ h3{
         margin-right: 1rem;
         font-size: 1.5rem;
     }
-    &.danger {
+    &.DANGER {
         background: #e9a129;
         color: #ae0015;
         &::before {
             content: "\f00d";
         }
     }
-    &.success {
+    &.SUCCESS {
         background: #e6f6d4;
         color: #5aa00d;
         &::before {
