--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
@@ -56,7 +56,7 @@
 
 				<ng-template let-datacol let-row="rowData" pTemplate="body">
 					<ng-template [ngIf]="!row[datacol.field]">
-						<span>{{col.uiStyles.attributes.placeholder}}</span>
+						<span>{{col?.uiStyles?.attributes?.placeholder}}</span>
 					</ng-template>
 					<ng-template [ngIf]="row[datacol.field] && isDate(col.type.name)">
 						<span title="{{row[datacol.field] | dateTimeFormat: col.uiStyles?.attributes?.datePattern : col.type.name }}">{{row[datacol.field] | dateTimeFormat: col.uiStyles?.attributes?.datePattern : col.type.name }}</span>
