--- a/nimbus-ui/nimbusui/src/assets/scss/_a.action-dropdown.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.action-dropdown.scss
@@ -40,6 +40,7 @@
                 display: block;
                 text-decoration: none;
                 padding:.2rem .4rem;
+                color:  #222222;
                 &:hover:not(.disabled), &:focus:not(.disabled){
                     color: #fff;
                     background: #4a90e2;
