--- a/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
@@ -215,6 +215,9 @@ h1.page-title {
     font-family: "Lucida Sans Unicode", "Lucida Grande", san-serif;
     font-size: 1rem;
 }
+.ui-widget-content a {
+    color: #0275d8;
+}
 .textWrapBreakWord {
     word-break: break-word;
     font-weight: bold;
