--- a/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
@@ -111,6 +111,7 @@ p-dropdown.form-control {
     border: none;
     padding:0.1rem;
     background: none;
+    line-height: 1.5;
     .ui-widget-content {
         border: 1px solid #9dd3f7;
         background: #ecf7ff;
