--- a/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
@@ -186,8 +186,38 @@ ng-component{
     }
 }
 
-.ui-expanded-row-content .scrollGrid td.dropdown .ui-cell-data, .ui-expanded-row-content .ui-datatable td.dropdown .ui-cell-data {
+.ui-expanded-row-content .scrollGrid td.dropdown .ui-cell-data, 
+.ui-expanded-row-content .ui-datatable td.dropdown .ui-cell-data {
     overflow: visible;
+}
+
+.ui-expanded-row-content {
+    .scrollGrid, .ui-datatable{
+        td.dropdown .ui-cell-data {
+            overflow: visible;
+        }
+        .ui-datatable-thead > tr > th .ui-column-title {
+            font-weight: normal;
+        }
+        tbody > tr.ui-widget-content.ui-datatable-odd {
+            background-color: #fff;
+        }
+    } 
+}
+.ui-row-toggler{
+    &.fa-chevron-circle-down:before {
+    content: "\f0d7";
+    color: #e5991c;
+    }
+    &.fa-chevron-circle-right:before{
+        content: "\f0d7";
+        color: #94acbc;;
+    }
+}
+.ui-datatable tr.ui-expanded-row-content .ui-datatable .ui-state-default, 
+.scrollGrid tr.ui-expanded-row-content .ui-datatable .ui-state-default {
+    background-color: #ebebeb;
+    color: #555;
 }
 
 .ui-widget-content {
