add grid button style

--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
@@ -100,8 +100,8 @@
 		
 		<p-footer>
 			<ng-template [ngIf]="element.config?.uiStyles?.attributes?.postButton">
-				<div class="text-sm-left">
-					<button (click)="postGridData(this)" type="button" class="btn btn-action post-btn">
+				<div class="text-sm-left mt-1 ml-2">
+					<button (click)="postGridData(this)" type="button" class="btn btn-secondary post-btn">
 						{{element.config.uiStyles.attributes.postButtonLabel}}
 					</button>
 				</div>
