--- a/nimbus-ui/nimbusui/src/app/components/platform/content/page-content.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/content/page-content.component.html
@@ -1,10 +1,9 @@
 <!-- Display Tiles -->
-<div>
-    {{element?.message?.text}}
-</div>
-<ng-template [ngIf]="element?.config?.labelConfigs?.length > 0">
+<nm-message messageType="{{element?.message.type}}" messageText="{{element?.message.text}}" *ngIf="element?.message"></nm-message>
+
+<ng-template [ngIf]="element?.config?.labelConfigs?.length > 0 && element?.visible && element?.config?.visible">
     <h1 class="page-title {{imgSrc}} ">
-        {{label}} 
+        {{label}}
     </h1>
 </ng-template>
 <nm-tile [element]="tile" *ngFor="let tile of tilesList"></nm-tile>
