--- a/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
@@ -145,8 +145,12 @@ h1.page-title {
     padding: .6rem 0;
     margin: 0 20px 10px;
     border: 1px solid #9dd3f7;
+     div.text-bold:nth-child(1) {
+         nm-subheader:nth-child(1) {
+            font-size: 1.1rem;
+         }
+     }
 }
-
 .colorBox {
     padding:1rem;
     border: 1px solid #bbd3e8;
@@ -286,7 +290,9 @@ legend {
         margin-bottom: 1.5rem;
     }
 }
-
+.ui-calendar input {
+    width: 120px;
+}
 .form-group.questionGroup  {
     margin-bottom: 2.5rem;
     label {
@@ -309,9 +315,8 @@ legend {
         max-width: 300px;
         width: 100%;
     }
-    .ui-calendar input {
-        width: 180px;
-    }
+  
+   
     //.date-holder is old date component
     .date-holder::after {
         vertical-align: text-bottom;
@@ -348,6 +353,53 @@ legend {
         vertical-align: bottom;
     }
 }
+.ui-datepicker {
+.ui-widget-content a{
+        color: #696b6c;
+    }
+    .ui-datepicker-header a {
+     color: #494949;
+    }
+}
+.ui-state-default {
+    border: 1px solid #b9b6b6;
+}
+.ui-inputtext:enabled:hover {
+    border-color: #9dd3f7;
+}
+.ui-dropdown:not(.ui-state-disabled):hover {
+    border-color: #9dd3f7;
+}
+.ui-datepicker-header {
+    background: #9dd3f7;
+    color: #494949;
+}
+.ui-datepicker-prev span, 
+.ui-datepicker-next span{
+    color: #006bc2;
+}
+.ui-datepicker.ui-widget .ui-datepicker-calendar td a.ui-state-highlight {
+    background-color: #006bc2;
+    color: #fff;
+}
+.ui-datepicker.ui-widget .ui-datepicker-calendar thead th {
+    background-color: #c8e3f6;
+}
+button.ui-datepicker-trigger.ui-calendar-button {
+    border: none;
+    background: none;
+    color: #2399e5;
+    font-size: 1.7rem;
+    width: 2.5rem;
+  }
+  .ui-widget.ui-button:enabled:hover, 
+  .ui-widget.ui-button:focus{
+    border: none;
+    background: none;
+    color: #4c4c4c;
+  }
+
+
 //.date-holder is old date component
 
 .date-holder {
