--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
@@ -1,5 +1,5 @@
 
-<div id="gsFlexGrid" class="scrollGrid">---{{element.visible}}---
+<div id="gsFlexGrid" class="scrollGrid">
 	<div class="ui-datatable-header ui-widget-header" *ngIf="element.config?.uiStyles?.attributes?.showHeader == true">
 		<p-header>
 			{{label}}
