--- a/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
@@ -1,7 +1,7 @@
 <div class="col-sm-12 border-bottom mb-1" *ngIf="element.config.uiStyles.attributes.type=='Divider'">
 </div>
 <div class="{{fieldClass}} p-0 clearfix" *ngIf="element.config.uiStyles.attributes.type=='Field'">
-    <ng-template [ngIf]="element.config?.uiStyles?.attributes?.imgSrc">
+    <!-- <ng-template [ngIf]="element.config?.uiStyles?.attributes?.imgSrc">
         <div class="d-inline-block " style="font-size: 2.4rem; margin-right: .3rem;">
             <i class="{{element.config.uiStyles.attributes.imgSrc}}"></i>
         </div>
@@ -11,18 +11,21 @@
                 <p class="form-control-static">{{value ? value : placeholder}}&nbsp;</p>
             </div>
         </div>
-    </ng-template>
+    </ng-template> -->
     <ng-template [ngIf]="!element.config?.uiStyles?.attributes?.imgSrc && element?.visible == true">
         <ng-template [ngIf]="element.config.uiStyles.attributes.inplaceEdit">
             <inplace-editor [element]="element"></inplace-editor>
         </ng-template>
+        
         <ng-template [ngIf]="isDate(element.type.name)">
             <label class="" *ngIf="element.config.uiStyles.attributes.showName==true">{{label}}</label>
             <div class="{{iconClass}}">{{value | dateTimeFormat: element.config?.uiStyles?.attributes?.datePattern : element.type.name }}&nbsp;</div>
          </ng-template>
+
         <div class="form-group" *ngIf="!element.config.uiStyles.attributes.inplaceEdit && !isDate(element.type.name)">
             <label class="" *ngIf="element.config.uiStyles.attributes.showName==true">{{label}}</label>
             <div class="{{iconClass}} textWrapBreakWord">{{value ? value : placeholder}}&nbsp;</div>    
         </div>
+
     </ng-template>
 </div>
