--- a/nimbus-ui/nimbusui/src/app/components/platform/modal/modal.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/modal/modal.component.html
@@ -1,6 +1,15 @@
 <ng-template [ngIf]="type == 'dialog'">
-    <p-dialog [(visible)]="visible" [closable]="closable" (onHide)="closeDialog($event)" [closeOnEscape]="false" [modal]="true" [width]="width" 
-    appendTo="body" [responsive]="true" [blockScroll]="true" [contentStyle]="{'overflow':'auto','max-height':'500px'}">
+    <p-dialog [(visible)]="visible" 
+    [closable]="closable" 
+    (onHide)="closeDialog($event)" 
+    [closeOnEscape]="false" 
+    [modal]="true" 
+    [width]="width" 
+    appendTo="body" 
+    [responsive]="true" 
+    [blockScroll]="true" 
+    [contentStyle]=""
+    >
         <p-header *ngIf="label">
             {{label}}
             <nm-tooltip *ngIf="helpText" [helpText]='helpText'></nm-tooltip>
